--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   
   <!-- قسم اختيار القالب -->
   <div id="template-selection">
-    <img src="images/3.png" alt="قالب 1" class="template-option" onclick="selectTemplate('images/3.png')">
-    <img src="images/5.png" alt="قالب 2" class="template-option" onclick="selectTemplate('images/5.png')">
-    <img src="images/7.png" alt="قالب 3" class="template-option" onclick="selectTemplate('images/7.png')">
+    <img src="images/1.jpg" alt="قالب 1" class="template-option" onclick="selectTemplate('images/1.jpg')">
+    <img src="images/2.jpg" alt="قالب 2" class="template-option" onclick="selectTemplate('images/2.jpg')">
+    <img src="images/3.jpg" alt="قالب 3" class="template-option" onclick="selectTemplate('images/3.jpg')">
+    <img src="images/4.jpg" alt="قالب 4" class="template-option" onclick="selectTemplate('images/4.jpg')">
     <!-- يمكنك إضافة المزيد من الصور هنا -->
   </div>
   
