--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@
 
   </div>
 </div>
+  <script>
+document.getElementById('help-btn').onclick = function() {
+  document.getElementById('help-modal').style.display = 'flex';
+};
+
+document.getElementById('close-help-btn').onclick = function() {
+  document.getElementById('help-modal').style.display = 'none';
+};
+</script>
+
 
 </body>
 </html>
